--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "latest",
     "next-google-fonts": "^2.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   }
 }
