--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.1.1",
     "@mui/material": "^5.14.2",
     "next": "latest",
     "next-google-fonts": "^2.2.0",
@@ -16,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.2",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "yup": "^1.2.0"
   }
 }
