--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
     "@mui/material": "^5.14.2",
+    "mysql2": "^3.5.2",
     "next": "latest",
     "next-google-fonts": "^2.2.0",
     "react": "18.2.0",
@@ -18,6 +19,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "sequelize": "^6.32.1",
     "yup": "^1.2.0"
   }
 }
