--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
     "@mui/material": "^5.14.2",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.2",
     "next": "latest",
     "next-google-fonts": "^2.2.0",
+    "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
     "sequelize": "^6.32.1",
     "yup": "^1.2.0"
   }
