--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
     "@mui/material": "^5.14.2",
+    "mysql2": "^3.6.0",
     "next": "latest",
     "next-google-fonts": "^2.2.0",
     "react": "18.2.0",
